amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  CHG: Removed the search-token index. Searching now iterates through the playlist,
       offering direct and specific access to the metadata.
  FIX: Bug where fill-down would cause lots of extra tags to be written when a search is
       in progress (BR 79482).
  FIX: Defect in plugin framework code, leading to a crash on some systems
       during engine plugin initialization.
  FIX: Restoring current playlist on startup (BR 79436, BR 79439).
  ADD: Searching the Collection with a filter.
  FIX: BrowserWin's QLabels are painted white in amaroK's own color scheme.

VERSION 1.0-beta1:
  ADD: Search Browser - search stuff on your hdd / in your collection
  ADD: song count on playlist statusbar
  ADD: support for XMMS visualization plugins
  ADD: Collection Browser - a database powered music collection manager
  ADD: Playlist toolbar is now configurable
  ADD: toolbar analyzer in playlist window
  ADD: use XML playlists internally within amaroK so tags don't have to be
       loaded/reloaded all the time. Makes undo/redo much quicker.
  FIX: non latin1 locale issues with loading directories and tags (thanks Leo Zhu)
  ADD: clicking shuffle will sort the playlist by the nextQueue first, and
       randomise the rest
  ADD: Play Next can now handle several songs through a queue. The queue can be
       manipulated by using the context menu or by CTRL+right clicking.
  ADD: much improved gstreamer engine, now working with visualizations
  CHG: GstEngine requires gstreamer-0.8
  FIX: Show move pointer instead of hand when moving preview OSD.
  ADD: sorting by artist subsorts by album and track, sorting by album subsorts
       by track, enjoy!
  ADD: browserTabs float over the playlist when in set to not overlap
  FIX: communication loader<-->amarok failing on FreeBSD
  FIX: loader forgetting to close socket descriptors
  FIX: FileBrowser remembers that state of its view between sessions